--- a/src/App.css
+++ b/src/App.css
@@ -28592,4 +28592,4 @@ mcd-carousel-banner .banner:has(.carousel-wrap.singlefull.mcd),mcd-carousel-bann
 
 .input-group .mdc-icon-button svg {
     fill: #90b4ef
-} */
+}
